[package]
name = "gomoku"
version = "0.1.0"
authors = ["chenyukang <moorekang@gmail.com>"]
edition = "2018"

[features]
default = ["random"]
server = ["warp", "tokio"]
random = ["rand"]

[[bin]]
name = "gomoku"
path = "src/main.rs"

[[bin]]
name = "ml_trainer"
path = "src/bin/ml_trainer.rs"

[lib]
crate-type = ["cdylib", "lib"]
name = "gomoku"
path = "src/lib.rs"

[dependencies]
glob = "0.3.0"
rand = { version = "0.8.0",  optional = true}
generational-arena = "0.2"
cfg-if = "0.1"
wasm-bindgen = "0.2"
yansi = "0.5.0"
clap = "3.0.0-beta.2"
tokio = { version = "1", features = ["full"], optional = true }
warp = { version = "0.3", optional = true }
pretty_env_logger = "0.4"
url = "2.2.0"
serde_json = "1.0"
build_timestamp = "0.1.0"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"
[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"]}

[[bench]]
name = "bench"
harness = false
